--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/tgrowden/MarkovChainBot#readme",
   "devDependencies": {
     "eslint": "^3.15.0"
+  },
+  "dependencies": {
+    "@slack/client": "^3.8.1",
+    "markov-chain-generator": "^0.1.0",
+    "mongoose": "^4.8.4"
   }
 }
