--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Slack bot that generates Markov chains based on a user's public post history.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
